--- a/appdriver/src/main/res/values/strings.xml
+++ b/appdriver/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
   -->
 
 <resources>
-    <string name="app_name">g3appdriver</string>
+    <string name="app_name">Guanzon Telemarketing App</string>
 
     <string name="free_text_restriction">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz1234567890@ēāéñễấũ.,/-</string>
     <string name="decimal_only">0123456789.</string>
