--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AndroidA_ppDriver</string>
+    <string name="app_name">GGC_Android_AppDriver</string>
 </resources>
